--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,14 @@ version: '3'
 # https://medium.com/bitcraft/docker-composing-a-python-3-flask-app-line-by-line-93b721105777
 # http://laradock.io/
 
+networks:
+  default:
+    driver: ${NETWORKS_DRIVER}
+
+volumes:
+  postgres:
+    driver: ${VOLUMES_DRIVER}
+
 services:
   flask:
     image: webapp-flask
@@ -15,6 +23,8 @@ services:
         - FLASK_APP
     volumes:
       - ${APP_CODE_PATH_HOST}:/app
+    networks:
+      - default
   nginx:
     image: webapp-nginx
     build:
@@ -26,12 +36,14 @@ services:
     ports:
       - "${NGINX_HOST_HTTP_PORT}:80"
       - "${NGINX_HOST_HTTPS_PORT}:443"
+    networks:
+      - default
     depends_on:
       - flask
   postgres:
       build: ./postgres
       volumes:
-        - data:/var/lib/postgresql/data
+        - postgres:/var/lib/postgresql/data
         - ${POSTGRES_ENTRYPOINT_INITDB}:/docker-entrypoint-initdb.d
       ports:
         - "${POSTGRES_PORT}:5432"
@@ -39,6 +51,5 @@ services:
         - POSTGRES_DB=${POSTGRES_DB}
         - POSTGRES_USER=${POSTGRES_USER}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-volumes:
-  data:
-    external: true
+      networks:
+      - default
